--- a/src/content/posts/to-write-repeatedly.mdx
+++ b/src/content/posts/to-write-repeatedly.mdx
@@ -8,13 +8,7 @@ description: Why I’ve failed to write in the past, and what I’m doing differ
 ---
 
 # To write, repeatedly
-Do the thing that scares you most, because it’s probably the most important thing you can do.
-
-I’m terrified of writing, but I know I must do it. 
-
-Every year I set a goal to write more. Yet every year, despite succeeding in other ways, I fail to write like I want to.
-
-Last year my goal was to publish 12 blog posts. By the end of 2020, my record stood at zero published and zero attempted.
+Last year I had a goal to publish 12 blog posts. By the end of 2020, my record stood at zero published and zero attempted.
 
 As a new year begins I can’t help but wonder: Why did I fail in the past, and what must I do differently to succeed this time? 
 
@@ -30,12 +24,12 @@ Without specific actions to take, I didn’t have a clear a path forward, so the
 ## There’s no action without motivation 
 “Publish 12 blog posts” was a wish rather than a goal. But even as wish, it failed to do its job.
 
-Why the number 12? What would 12 blog posts achieve for me? How would publishing them actually change my life for the better? 
+Why the number 12? What would 12 blog posts achieve for me? How would publishing them change my life for the better? 
  
 Deep down I knew the goal was arbitrary and didn’t really matter to me when compared with all the other things on my plate. This goal had to compete for my time and attention, and it just didn’t make the cut. 
 
-## It’s identity, stupid
-I realize now what matters to me isn’t the deliverable of 12 blog posts. What I actually care about is deeper than that. It’s about my identity. 
+## It’s about identity
+I realize now what matters to me isn’t the deliverable of 12 blog posts. What I care about is deeper than that. It’s about my identity. 
 
 “People like us do stuff like this” is a phrase from [Seth Godin](https://seths.blog/2013/07/people-like-us-do-stuff-like-this/) that comes to mind. 
 
@@ -46,12 +40,12 @@ They say you are what you do repeatedly. So to change my identity I need to chan
 ## A new approach
 Now that I know how and why I stumbled last year, here’s what I’m doing differently in 2021:
 
-### Make the goal about action
-Instead of defining my goal as a deliverable, I’ve defined it as an action to take repeatedly. My revised goal is to write for 1 hour every day about something I can publish. 
+## 1. Make the goal about action
+Instead of defining my goal as a deliverable, I’ve defined it as an action to take. My revised goal is to write for 1 hour every day about something I can publish. 
 
 If I can perform this one action every day, then eventually I’ll have formed a habit that shapes my identity, making me someone who writes. 
 
-### Put time in the calendar and show up
+## 2. Put time in the calendar and show up
 Knowing the action I’m going take, I can be specific about when, how often, and even where I’m going to take that action. 
 
 Decisions about duration and frequency show up as a recurring event on my calendar. Every day, at the same time and in the same place, I write. 
@@ -60,14 +54,14 @@ Blocking time makes it easier to show up and do the work: I know when I have to 
 
 Showing up is of course critical. I use a few other tricks to keep me on track:
 
-1) A daily checklist with a counter that tracks consecutive days of writing. 
-2) A routine that prepares me to write. 
-3) A milestone to reach: publish a blog post by the end of January 2021. 
+1. A daily checklist with a counter that tracks consecutive days of writing. 
+2. A routine that prepares me to write. 
+3. A milestone to reach: publish a blog post by the end of January 2021. 
 
-### Have a repeatable workflow
+## 3. Have a repeatable workflow
 If 80% of success in life is showing up, that leaves me with the other 20% to consider. 
 
-What do I actually do when I sit down to write each day? 
+What do I do when I sit down to write each day? 
 
 Rather than face a blank page and expect some magic to happen, I now have a set of steps to take and a consistent way of taking those steps. 
 
@@ -81,7 +75,7 @@ What I have is a repeatable workflow for writing, and it goes something like thi
 - Edit, edit, edit
 - Publish
 
-## Success is the practice, not its side effects  
+## Success is in the practice, not its side effects  
 I now approach writing as a practice to follow rather than an assignment to complete. The achievement I celebrate is the hour I write each day.
 
 By reframing success in this way, I’m sidestepping my expectations and insecurities about the content itself, and clearing a path forward to do the work. 
