sorting posts and articles, responsive tweaks, show more button

--- a/src/content/workSection/index.mdx
+++ b/src/content/workSection/index.mdx
@@ -7,4 +7,4 @@ skills:
   - Design Systems
 ---
 
-I specialize in productivity tools and workflows. I'm a designer who can research, prototype, user test, create design systems, and manage teams.
+I design tools and simplify complexity. I'm a designer who can research, prototype, build design systems, and ship product.
