blog and post content matches md tags, added logic to link to external posts

--- a/src/content/posts/2016-year-in-review.mdx
+++ b/src/content/posts/2016-year-in-review.mdx
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2016 year in review
+title: 2016 Year in Review
 date: 2017-01-31
 category: Blog Post
 description: A look back on what I did in 2016
