--- a/src/content/posts/milkshales-and-design.mdx
+++ b/src/content/posts/milkshales-and-design.mdx
@@ -1,5 +1,5 @@
 ---
-title: Milkshakes and design
+title: Milkshakes and Design
 date: 2021-01-17
 category: Blog Post
 description: What a lecture about milkshakes taught me about design 
