--- a/src/content/posts/to-write-repeatedly.mdx
+++ b/src/content/posts/to-write-repeatedly.mdx
@@ -1,11 +1,10 @@
 ---
-title: To write, repeatedly
+title: To Write, Repeatedly
 date: 2021-01-09
 category: Blog Post
 description: Why I’ve failed to write in the past, and what I’m doing differently now
 ---
 
-# To write, repeatedly
 Last year I had a goal to publish 12 blog posts. By the end of 2020, my record stood at zero published and zero attempted.
 
 As a new year begins I can’t help but wonder: Why did I fail in the past, and what must I do differently to succeed this time? 
