--- a/src/content/posts/try-it-and-see.mdx
+++ b/src/content/posts/try-it-and-see.mdx
@@ -1,12 +1,8 @@
 ---
-layout: post
-title: Try and see
+title: Try It and See
 date: 2018-01-20
 category: Blog Post
 description: Why it's important to try it and see IRL
-heroImage: ../images/lp-hero.png
-cardImage: ../images/lp-card.gif
-company: Solvers.io
 ---
 
 # Say you have an idea… 
