added images to case studies

--- a/src/content/posts/2017-year-in-review.mdx
+++ b/src/content/posts/2017-year-in-review.mdx
@@ -6,7 +6,8 @@ category: Blog Post
 description: Reflecting on my life in 2017
 hero-image: /images/2017-hero.PNG
 ---
-![hero image]({{ site.url }}{{ page.hero-image }}){: .hero-image}
+
+![mountain sunrise](../images/2017-hero.png)
 
 As 2018 begins, I want to take a moment to reflect on my life in 2017.
 
