--- a/src/content/projects/medical-crm.mdx
+++ b/src/content/projects/medical-crm.mdx
@@ -5,10 +5,10 @@ date: 2017-10-24
 category: Case Study
 description: A web-based CRM tool for medical clinics
 meta: UX/UI Design
-heroImage: ../images/lp-hero.png
-cardImage: ../images/lp-card.gif
+cardImage: ../images/avie-crm-card.png
 ---
-![hero image]({{ site.url }}{{ page.hero-image }}){: .hero-image}
+![medical crm patient profile](../images/avie-crm-hero.png)
+
 
 I worked with a medical clinic to design a web-based CRM tool for streamlining their workflow. I also delivered a component-based design spec that guided development.
 
@@ -24,7 +24,7 @@ My challenge was to organize patient information to be accessible and readable. 
 With tasks and workflows roughly defined, I sketched and evaluated different patterns for navigation and content organization
 I was able to quickly explore a range of options and think through the pros and cons of different patterns for layout, hierarchy, and navigation before moving into higher fidelity.
 
-![patient profiles]({{ site.url }}/images/hd-sketches.png){: .large-image}
+![sketches](../images/avie-crm-sketches.png)
 
 ## Iteration and Refinement
 I went from concept sketches into high-fidelity, and worked with the clinic to iterate and refine the designs based on their feedback
@@ -33,39 +33,39 @@ Below are a some of the design decisions I worked through with the clinic:
 ## Patient Lookup
 To make patient lookup more actionable, I grouped patients into task-oriented categories, rather than display them as a single list.
 
-![patient profiles]({{ site.url }}/images/hd-patients.png){: .large-image}
+![patient profiles](../images/avie-crm-patients.png)
 
 
 ## Patient Profiles
 I designed a patient info header that summarizes the patient's most important information at a glance and lends itself to the F-shaped scanning pattern that comes naturally to most people.
 
-![patient profiles]({{ site.url }}/images/hd-appointment-tabs-list-items.png){: .large-image}
+![patient profiles](../images/avie-crm-appointment-tabs-list-items.png)
 
 ## Patient Data
 To show more information at a glance, I used data tables instead of a list view, making it faster to sort through detailed patient data.
 
-![patient profiles]({{ site.url }}/images/hd-appointment-tabs-data-table.png){: .large-image}
+![patient profiles](../images/avie-crm-appointment-tabs-data-table.png)
 
 
 ## Contextual Filters
 I displayed filter options in a persistent side panel to promote available options and make it clear which options are selected at any given time.
 
-![patient profiles]({{ site.url }}/images/hd-appointment-filter-panel.png){: .large-image}
+![patient profiles](../images/avie-crm-appointment-filter-panel.png)
 
 
 ## Quick Actions
 I used an action button in each row of the data table, making it easy for user to perform common tasks quickly and in context of the information they're looking at.
 
-![patient profiles]({{ site.url }}/images/hd-comms-filter-quick-action.png){: .large-image}
+![patient profiles](../images/avie-crm-comms-filter-quick-action.png)
 
 
 ## Style Guide
-## I also delivered a style guide that helped us consistently apply styles and UI elements across the application
+I also delivered a style guide that helped us consistently apply styles and UI elements across the application
 
-![patient profiles]({{ site.url }}/images/hd-components-style-guide.png){: .large-image}
+![patient profiles](../images/avie-crm-components-style-guide.png)
 
 ## Developer Handoff
 To help guide development, I delivered specs for each UI element and their states
 Early on the developers and I talked about the concept for the UI. We were both thinking in terms of components and states, so it was natural to define specs in a similar way.
 
-![patient profiles]({{ site.url }}/images/hd-components-filter-options.png){: .large-image}
+![patient profiles](../images/avie-crm-components-filter-options.png)
