--- a/src/content/posts/try-it-and-see.mdx
+++ b/src/content/posts/try-it-and-see.mdx
@@ -5,9 +5,7 @@ category: Blog Post
 description: Why it's important to try it and see IRL
 ---
 
-# Say you have an idea… 
-
-You’re trying to solve a *problem* or achieve a goal, and you think your idea will help. The question I want to answer is this:
+Imagine you have an idea for how to solve a problem or achieve a goal. The question I want to answer is this:
 
 *How do you know your idea is right?*
 
@@ -21,10 +19,6 @@ We can trust our mind’s predictions about where to eat lunch because we’ve r
 
 > When it comes to where to each lunch, it’s safe to say that our beliefs match reality.<figcaption> &mdash; Jeremy Keith, <cite>Mental models</cite> </figcaption>
 
- 
-
-
-
 ## But what happens when...
 
 To make good decisions, we need a more accurate try-and-see simulation than our mind alone can provide.
@@ -34,16 +28,8 @@ To make good decisions, we need a more accurate try-and-see simulation than our 
 - Your idea has been tried before but never in this exact way or in this exact environment?
 - It’s really expensive to make the wrong choice.
 
-1. Test 1
-1. Test 2
-1. Test 3
-1. Test 4
 
 In these situations our <q>beliefs are likely to be misleading</q> because our brain doesn’t have a reliable model of reality.
-
-[Click here](https://mdxjs.com)
-
-![testing this image](../images/ipad-all-screens.png)
 
 To make good decisions, we need a more accurate try-and-see simulation than our mind alone can provide.
 
