--- a/src/content/projects/ecommerce-cms.mdx
+++ b/src/content/projects/ecommerce-cms.mdx
@@ -1,12 +1,10 @@
 ---
-layout: post
 title: Second Funnel CMS
 date: 2017-10-22
 category: Case Study
 description: A CMS for configuring eCommerce landing pages
 meta: Product Design
-heroImage: ../images/lp-hero.png
-cardImage: ../images/lp-card.gif
+cardImage: ../images/second-funnel-cms-tile-interaction.gif
 ---
 
 As part of my work with Second Funnel, I helped design a web-based CMS that provided a way for marketers to configure and deploy custom eCommerce pages without having to change the code on their site.
@@ -20,7 +18,8 @@ As the designer on our team, I interviewed customers, produced user flows and a 
 I met with our customers to understand how they worked within their organizations and how our product would fit into their workflow
 Our primary user type was a Digital Marketing Manager. This person was responsible for configuring and launching the landing page.
 
-![user types]({{ site.url }}/images/db-usertypes.png){: .small-image}
+![user types](../images/second-funnel-cms-user-types.png)
+
 
 ## Workflows and tasks
 I mapped out a workflow and defined tasks and subtasks
@@ -32,44 +31,45 @@ To configure a landing page, the user would have to perform three major tasks:
 2. Tag Content
 3. Arrange Content
 
-![feature set]({{ site.url }}/images/db-featureset.png){: .small-image}
+![feature set](../images/second-funnel-cms-feature-set.png)
 
 ## Sketches and prototypes
 With the tasks and requirements in hand, I started sketching ideas for the UI
 From these early sketches we prototyped some key features. For example, we built a very basic interface for importing product data into our database that we used and tested internally.
 
-![prototype]({{ site.url }}/images/db-prototype.png){: .small-image}
+![prototype](../images/second-funnel-cms-prototype.png)
 
 ## Sitemap and user flows
 I defined the information architecture of the app and showed how a user would move through the application to complete tasks
 The sitemap shows the top-level navigation and the three flows that make up page configuration: importing, tagging, and arranging content.
 
-![site map and user flows]({{ site.url }}/images/sf-cms-sitemap-user-flows.png){: .large-image}
+![site map and user flows](../images/second-funnel-cms-sitemap-user-flows.png)
+
 
 ## Wireframes
 I created wireframes for the major tasks of selecting templates, and importing, tagging, and arranging content
 
-![wireframes]({{ site.url }}/images/sf-cms-wireframes.png){: .large-image}
+![wireframes](../images/second-funnel-cms-wireframes.png)
 
 ## Styles and components
 I put together a style guide and component library which I used to design the rest of the screens in high-fidelity
 The wireframes helped me define a set of UI elements. From here, I created symbols in Sketch and applied a basic set of shared styles to get me started. To come up with the visual styling, I referenced our product objectives and our visual identity.
 
-![components]({{ site.url }}/images/sf-cms-style-guide-components.png){: .large-image}
+![style guide and components](../images/second-funnel-cms-style-guide.png)
 
 
 ## Dashboard
-![visual dashboard]({{ site.url }}/images/sf-cms-visual-dashboard.png){: .large-image}
+![dashboard design](../images/second-funnel-cms-dashboard-design.png)
 
 ## Tile arrangement
-![visual dashboard]({{ site.url }}/images/sf-cms-visual-tile-arragement.png){: .large-image}
+![tile arragment UI](../images/second-funnel-cms-tile-arrangement-UI.png)
 
 ## Interactions
 I experimented with different interactions and discovered a way to streamline content management
 By showing controls on hover instead of in a side menu, users could edit and arrange content faster, with less friction.
 
-![tile over control interaction]({{ site.url }}/images/sf-cms-interactions-tile-over.gif){: .small-image}
+![tile controls interaction](../images/second-funnel-cms-tile-interaction.gif)
 
-![tile over control states]({{ site.url }}/images/sf-cms-tile-over-controls.png){: .small-image}
+![tile controls states](../images/second-funnel-cms-tile-controls-states.png)
 
-![framer]({{ site.url }}/images/sf-cms-framer.png){: .small-image}
+![framer prototype](../images/second-funnel-cms-framer-prototype.png)
