--- a/src/content/projects/patient-onboarding.mdx
+++ b/src/content/projects/patient-onboarding.mdx
@@ -5,10 +5,9 @@ date: 2017-10-23
 category: Case Study
 description: An iPad app for patient onboarding
 meta: UX/UI Design
-heroImage: ../images/lp-hero.png
-cardImage: ../images/lp-card.gif
+cardImage: ../images/patient-onboarding-card.png
 ---
-![hero image]({{ site.url }}{{ page.hero-image }}){: .hero-image}
+![onboarding start screens](../images/patient-onboarding-hero.png)
 
 As part of my work with Avie, I designed an onboarding experience for new and returning patients.
 
@@ -16,7 +15,7 @@ I defined three different user flows (new patients, returning patients, and conf
 
 With this onboarding system in place, patients complete forms faster and with less effort, and their time spent in waiting rooms becomes an opportunity to be educated about procedures and treatments.
 
-![screens showing a user flow]({{ site.url }}/images/ipad-all-screens.png){: .small-image}
+![all screens isometric layout](../images/patient-onboarding-all-screens.png)
 
 ## Problem Definition
 We noticed that onboarding was a point of frustration for both patients and clinics
@@ -30,14 +29,14 @@ In addition to the onboarding flows for patients, we also needed a way for staff
 I was able to group complex tasks and present them as a single step, on a single screen
 By chunking tasks into 3-4 steps like this was to make onboarding feel more manageable for patients. Four steps feels easier than 25, even if the effort required is the same. And progression feels more meaningful as well.
 
-![screens showing a user flow]({{ site.url }}/images/ipad-forms.png){: .large-image}
+![intake forms](../images/patient-onboarding-forms.png)
 
 
 ## Designing for Flexibility  
 Each step is a module that can be configured for each patient
 As a result, the system can adapt to the varying needs of different clinics and patients. To a similar end, I used cards to display a variety of content formats while maintaining visual consistency throughout the experience.
 
-![screens showing a user flow]({{ site.url }}/images/ipad-cards.png){: .large-image}
+![onboarding cards](../images/patient-onboarding-cards.png)
 
 ## Copy and Interactions
 I used copy and interactions to guide and reassure patients as they progressed through the onboarding flow
@@ -45,4 +44,6 @@ The welcome page confirms a patient's scheduled procedure and gives an overview 
 
 When sending a form, the button label text transitions from “Send” to “Sent” and the text color transitions from blue to green. And in the FAQ section, a patient gets visual confirmation when then submit a question.
 
-![screens showing a user flow]({{ site.url }}/images/ipad-send-faq.png){: .large-image}
+![send faq screen](../images/patient-onboarding-send-faq.png)
+
+![faq animation prototype](../images/patient-onboarding-faq-animation.gif)
