--- a/src/content/heroSection/index.mdx
+++ b/src/content/heroSection/index.mdx
@@ -1,6 +1,6 @@
 ---
 greeting: Hello,
 name: Marco
-role: Product Designer based in
-location: New York City
+role: Product Designer
+location: based in New York City.
 ---
