--- a/src/content/workSection/index.mdx
+++ b/src/content/workSection/index.mdx
@@ -7,4 +7,4 @@ skills:
   - Design Systems
 ---
 
-I design tools and simplify complexity. I'm a designer who can research, prototype, build design systems, and ship product.
+I make tools and simplify complexity. I’m a designer who can research, prototype, build design systems, and ship product.
