--- a/src/content/posts/about-me.mdx
+++ b/src/content/posts/about-me.mdx
@@ -1,11 +1,11 @@
 ---
-title: About Me (The Long Version)
+title: About Me
 date: 2021-01-28
 category: Blog Post
 description: A Q&A-style post that summarizes my story
 ---
 
-# Hello 
+## Hello 
 My name is Marco Pacifico. I’m a product designer who lives in Brooklyn.
 
 ## What are you working on now?
@@ -14,7 +14,7 @@ I work at [Capsule](https://www.capsule.com/), where I design the workflows and 
 ## You’re a designer who can…?
 I make tools that help people get things done faster and easier. 
 
-As a founding or first designer, I know how build foundational pieces like a design system, user research practice, and an iterative, evidence-based design process. I untangle and fix design debt and tech debt.
+As a founding or first designer, I know how to build foundational pieces like a design system, user research practice, and an iterative, evidence-based design process. I untangle and fix design debt and tech debt.
  
 I’ve designed for consumers and business users; for responsive web, iOS, and products that live across multiple platforms.
 
