--- a/src/content/posts/about-me.mdx
+++ b/src/content/posts/about-me.mdx
@@ -34,7 +34,7 @@ After that I started a company where I designed a product used by retailers like
 Post-startup, I’ve been part of product teams as the first or lead designer, working alongside founders and executives to make product decisions. 
 
 ## What’s your M.O. as a designer?
-I care about asking the right questions to get to the root of a problem. If we can’t answer “why this?” and “how will we know it’s working?” then I’ll help us find answers.  
+I care about asking the right questions to get to the root of a problem. If we can’t answer *“why this?”* and *“how will we know it’s working?”* then I’ll help us find answers.  
 
 I make and test prototypes because the feedback helps us learn and iterate quickly. 
 
