content edits and typography tweaks

--- a/src/content/posts/about-me.mdx
+++ b/src/content/posts/about-me.mdx
@@ -9,14 +9,14 @@ description: A Q&A-style post that summarizes my story
 My name is Marco Pacifico. I’m a product designer who lives in Brooklyn.
 
 ## What are you working on now?
-I work at [Capsule](https://www.capsule.com/), where I design the workflows and tools used to run its operations. 
+I work at [Capsule](https://www.capsule.com/). I design the workflows and tools used to run its operations. 
 
 ## You’re a designer who can…?
 I make tools that help people get things done faster and easier. 
 
-As a founding or first designer, I know how to build foundational pieces like a design system, user research practice, and an iterative, evidence-based design process. I untangle and fix design debt and tech debt.
+As a founding or first designer, I set up foundational pieces like a design system, user research practice, and a design process. I help untangle and fix design debt.
  
-I’ve designed for consumers and business users; for responsive web, iOS, and products that live across multiple platforms.
+I design for consumers and business users; for responsive web, iOS, and products that live across multiple platforms.
 
 I’m strongest in the following areas:
 
@@ -38,9 +38,9 @@ I care about asking the right questions to get to the root of a problem. If we c
 
 I make and test prototypes because the feedback helps us learn and iterate quickly. 
 
-My best decisions are made based on evidence and logic derived from first principles. I’m a fan of using frameworks to frame problems and evaluate options.
+My best decisions are made based on evidence and logic derived from first principles. I’m a fan of using frameworks to describe problems and evaluate options.
 
-I sweat “the other 80%” of work needed to ship. That means doing QA and finessing edge cases. It also means helping my team work as a cohesive unit rather than an assembly line. I do this by showing my process and asking for feedback early to build trust, hopping on calls to clarify ambiguity, and building systems that remove friction. 
+I'll sweat “the other 80%” of work needed to ship. That means doing QA and finessing edge cases. It also means helping my team work as a cohesive unit rather than an assembly line. I do this by showing my process and asking for feedback early to build trust, hopping on calls to clarify ambiguity, and building systems that remove friction. 
  
 ## Where else have you lived?
 I was born, raised, and educated in Canada. Besides New York, I’ve lived in Vancouver, San Francisco, and Toronto. 
@@ -52,13 +52,13 @@ I go through phases where I enjoy being a big nerd. Then there are periods where
 
 I like reading about science and history and anything that explains people and why they do what they do. *Sapiens* is a perfect intersection of all these topics. Recently I read *Until the End of Time* by Brain Greene. *The Beginning of Infinity* by David Deutsch is another book I love. 
 
-I’m also into photography. I used to post my photos on Instagram, but I stopped because Instagram is a hell of a drug and I had to quit.  
+I’m also into photography. I used to post my photos on Instagram, but I stopped because social media is a hell of a drug and I had to quit.  
 
 ## Why did you make this website?
 This site is a space where I can do the following:
 
 1. Publish and practice writing.
-2. Learn to code and apply those skills. 
+2. Learn to code and apply what I learn. 
 3. Tell my story to learn about myself.
 4. Tell my story to connect with likeminded people.
 
