--- a/src/content/posts/about-me.mdx
+++ b/src/content/posts/about-me.mdx
@@ -40,7 +40,7 @@ I make and test prototypes because the feedback helps us learn and iterate quick
 
 My best decisions are made based on evidence and logic derived from first principles. I’m a fan of using frameworks to describe problems and evaluate options.
 
-I'll sweat “the other 80%” of work needed to ship. That means doing QA and finessing edge cases. It also means helping my team work as a cohesive unit rather than an assembly line. I do this by showing my process and asking for feedback early to build trust, hopping on calls to clarify ambiguity, and building systems that remove friction. 
+I sweat “the other 80%” of work needed to ship. That means doing QA and finessing edge cases. It also means helping my team work as a cohesive unit rather than an assembly line. I do this by showing my process and asking for feedback early to build trust, hopping on calls to clarify ambiguity, and building systems that remove friction. 
  
 ## Where else have you lived?
 I was born, raised, and educated in Canada. Besides New York, I’ve lived in Vancouver, San Francisco, and Toronto. 
