added images to sf landing page case study

--- a/src/content/projects/secondfunnel-pages.mdx
+++ b/src/content/projects/secondfunnel-pages.mdx
@@ -5,10 +5,9 @@ date: 2017-10-21
 company: Second Funnel
 description: Increasing conversion by 5x over convensional eCommerce pages
 meta: Product Design
-heroImage: ../images/lp-hero.png
 cardImage: ../images/lp-card.gif
 ---
-
+![second funnel landing pages](../images/lp-hero.png)
 
 ## An eCommerce experience designed for inspiration and discovery
 Second Funnel is an eCommerce software startup I worked on. We provided a way for marketers to deploy custom eCommerce pages without having to change the code on their site. Rather than try to squeeze more conversion out of an existing purchase path, Second Funnel enabled an entirely new experience that was optimized for inspiration and discovery.
@@ -18,7 +17,7 @@ As a member of the founding team, I helped define our product, validated our ear
 ## Outcome
 Second Funnel was used by retailers like Gap and Sur la Table, and lifted conversion rates by as much as 5X when A/B tested against conventional eCommerce pages
 
-![mobile shop the look interactions](./images/lp-card.gif)
+![mobile shop the look interactions](../images/lp-card.gif)
 
 ## Problem
 Time online was dominated by social media, yet social traffic converted 4X less than other sources
@@ -49,31 +48,32 @@ We focused on four ways to improve the experience:
 I came up with a product concept by exploring design patterns that were already working to hold people's attention in media and retail
 Inspiration came from image-based social media sites and lifestyle blogs and magazines—places where people were already spending a lot of time online getting inspired.
 
-![product concept sketch]({{ site.url }}/images/lp-sketches.png){: .large-image}
+![product concept sketch](../images/lp-sketches.png)
+
 
 ## Proof of Concept
 Our earliest prototypes validated that we could increase key metrics like time on site, items viewed per visitor, and click-through rates
 These early results were enough to help us get our our first paying customers
 
-![early prototypes]({{ site.url }}/images/lp-mvp-prototypes.png)
+![early prototypes](../images/lp-mvp-prototypes.png)
 
 ## Test and Iterate
 I evolved and refined the UI as we worked with more retailers and continued to run A/B tests
 To improve our conversion metrics, I experimented with design details like the hover state on tiles, showing information like price and discount percentages, and changing the style and wording of the CTA.
 
-![design iterations]({{ site.url }}/images/lp-design-evolution.png)
+![design iterations](../images/lp-design-evolution.png)
 
 ## Category Navigation
 I designed and tested multiple versions of our navigation, and ultimately increased the percentage of visitors who visited multiple categories from less than 10% to over 25%.
 
-![navigation design iterations]({{ site.url }}/images/lp-nav-iteration.gif){: .small-image}
+![navigation design iterations](../images/lp-nav-iteration.gif)
 
 ## Mobile Layout
 By improving the layout and interactions on our "shop-the-look" interface, I increased click-through rates from single digit percentages to between 10-25%.  
 
-![mobile iterations]({{ site.url }}/images/lp-mobile-shop-the-look-iteration.png)
+![mobile iterations](../images/lp-mobile-shop-the-look-iteration.png)
 
 ## Results
 The experience I designed reliably lifted conversion rates by as much as 5X when A/B tested against conventional eCommerce pages
 
-![outcome before and after]({{ site.url }}/images/lp-outcome.png)
+![outcome before and after](../images/lp-outcome.png)
