edits to content

--- a/src/content/posts/try-it-and-see.mdx
+++ b/src/content/posts/try-it-and-see.mdx
@@ -17,19 +17,14 @@ Often our imagination gets it right. Say it’s lunchtime and you’re hungry. T
 ## When not to trust your brain  
 We can trust our mind’s predictions about where to eat lunch because we’ve run the what-will-I-enjoy-eating experiment and gotten unequivocal results so many times that our mental guess-and-checks are accurate enough to rely on.
 
-> When it comes to where to each lunch, it’s safe to say that our beliefs match reality.<figcaption> &mdash; Jeremy Keith, <cite>Mental models</cite> </figcaption>
-
 ## But what happens when...
-
-To make good decisions, we need a more accurate try-and-see simulation than our mind alone can provide.
 
 - The success of your idea depends on other people’s reactions.
 - Your idea involves something that’s never been done before.
 - Your idea has been tried before but never in this exact way or in this exact environment?
 - It’s really expensive to make the wrong choice.
 
-
-In these situations our <q>beliefs are likely to be misleading</q> because our brain doesn’t have a reliable model of reality.
+In these situations our beliefs are likely to be misleading because our brain doesn’t have a reliable model of reality.
 
 To make good decisions, we need a more accurate try-and-see simulation than our mind alone can provide.
 
